# camera_genicam

./: CMakeLists.txt  README.md  package.xml
src/: camnode.cpp  signal.hpp
