<package>
  <name>camera_genicam</name>
  <version>0.0.1</version>
  <description>camera_genicam: An genicam camera driver for ROS2.</description>

  <maintainer email="nullpo24@gmail.com">nullpo24</maintainer>

  <author email="nullpo24@gmail.com">nullpo24</author>

  <license>LGPLv2</license>

  <url type="website">http://github.com/nullpo24/camera_genicam</url>

  <author>nullpo24</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>driver_base</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>driver_base</run_depend>
  <run_depend>tf</run_depend>

</package>
